k8s/base/ingress/bff-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bff.iocl.local
      secretName: bff-tls
  rules:
    - host: bff.iocl.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  number: 80
