k8s/base/ingress/spa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - iocl.local
      secretName: spa-tls
  rules:
    - host: iocl.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spa
                port:
                  number: 80
